--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <!-- Carousel End -->
 
         <!-- About Start -->
-        <div class="container-fluid about bg-light py-5">
+        <div id="about" class="container-fluid about bg-light py-5">
             <div class="container py-5">
                 <div class="row g-5 align-items-center">
                     <div
@@ -558,7 +558,7 @@
         <!-- Services End -->
 
         <!-- Project Start -->
-        <div class="container-fluid project">
+        <div id="service" class="container-fluid project">
             <div class="container">
                 <div
                     class="text-center mx-auto pb-5 wow fadeInUp"
@@ -662,7 +662,7 @@
         <!-- Project End -->
 
         <!-- Blog Start -->
-        <div class="container-fluid blog pb-5">
+        <div id="blog" class="container-fluid blog pb-5">
             <div class="container pb-5">
                 <div
                     class="text-center mx-auto pb-5 wow fadeInUp"
@@ -854,7 +854,7 @@
         <!-- Blog End -->
 
         <!-- Team Start -->
-        <div class="container-fluid team pb-5">
+        <div id="team" class="container-fluid team pb-5">
             <div class="container pb-5">
                 <div
                     class="text-center mx-auto pb-5 wow fadeInUp"
@@ -1329,7 +1329,7 @@
         <!-- FAQ End -->
 
         <!-- Contact Start -->
-        <div class="container-fluid contact bg-light py-5">
+        <div id="contact" class="container-fluid contact bg-light py-5">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-12 wow fadeInLeft" data-wow-delay="0.1s">
