--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
+        <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
     </head>
